src/unpackaged/post/new - installation/07_redu_object_tracking/objects/rio_ed__PE_Group_Status__c.object
<CustomObject>
	<fields>
        <fullName>rio_ed__Program_Enrollment__c</fullName>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipName>Program_Group_Statuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rio_ed__Completion_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completion Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rio_ed__Credits_Earned__c</fullName>
        <label>Credits Earned</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rio_ed__Grade_Points__c</fullName>
        <label>Grade Points</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rio_ed__Group_Status__c</fullName>
        <label>Group Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PE Group</label>
    <nameField>
        <label>PE Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PE Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>